# cpak

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CPakFile  LICENSE  README.md  build.sh  cpak  main.py  pyvenv.cfg
Scripts/: activate  activate.bat
application/: arguments.py
commands/: build.py  pull.py
core/: application.py  arguments.py  cpakfile.py  details.py  exceptions.py  logging.py  plugin.py  utils.py
cpakfile/: __init__.py  activation.py  author.py  build_info.py  build_target.py  cpakfile.py  dependency.py  export_info.py  identity.py  manageable.py  management.py  parent.py  platform.py  plugin.py  profile.py  project.py  remote.py  typedefs.py  utilities.py
samples/hello-world/: CPakFile  main.cpp
scripts/: build.bat  build.sh  test.bat  test.sh
source/: CMakeLists.txt  accessible.hpp  application.cpp  application.hpp  build.cpp  build.hpp  checksum.hpp  common.hpp  config.hpp  configuration.hpp  cpakfile.hpp  dependency.hpp  describe.hpp  entry.cpp  errorcode.cpp  errorcode.hpp  identity.hpp  install.hpp  management.cpp  management.hpp  option.hpp  pipeline.cpp  pipeline.hpp  platform.hpp  profile.hpp  project.cpp  project.hpp  property.hpp  repository.hpp  target.hpp  task.hpp  version.hpp
source/config/: linux.hpp  macintosh.hpp  windows.hpp
source/managers/: build.cpp  build.hpp  project.cpp  project.hpp
source/utilities/: checksum.hpp  logging.hpp  noncopyable.hpp  stropts.hpp
test/: __init__.py
test/cpakfile/: test_activation.py  test_author.py  test_build_info.py  test_build_target.py  test_cpakfile.py  test_dependency.py  test_export_info.py  test_identity.py  test_management.py  test_parent.py  test_platform.py  test_plugin.py  test_profile.py  test_project.py  test_remote.py
test/test_application/: CPakfile  test_config.yaml  test_configuration.py
test/test_cpakfile/: test_activation.py  test_author.py  test_build_info.py  test_build_target.py  test_cpakfile.py  test_dependency.py  test_export_info.py  test_identity.py  test_management.py  test_parent.py  test_platform.py  test_plugin.py  test_profile.py  test_project.py  test_remote.py
tests/: CMakeLists.txt  accessible_tests.cpp  build_pipeline_tests.cpp  build_target_tests.cpp  checksum_tests.cpp  cpakfile_tests.cpp  dependency_tests.cpp  installation_tests.cpp  management_tests.cpp  option_tests.cpp  project_manager_tests.cpp  project_tests.cpp  repository_tests.cpp  target_tests.cpp
